--- a/.gitconfig
+++ b/.gitconfig
@@ -28,3 +28,5 @@
 	cmd = git-nbmergetool merge \"$BASE\" \"$LOCAL\" \"$REMOTE\" \"$MERGED\"
 [mergetool]
 	prompt = false
+[branch]
+	autosetuprebase = always
